skill section wrap flex issue fixed

--- a/frontend_react/src/containers/Skills/Skills.scss
+++ b/frontend_react/src/containers/Skills/Skills.scss
@@ -46,6 +46,7 @@
     flex:0.75;
    display: flex;
    flex-direction: row;
+   flex-wrap: wrap;
 }
 
 .app__skills-item{
